--- a/package.json
+++ b/package.json
@@ -24,17 +24,27 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "preview": "pnpm build && nuxt preview",
+    "start": "nuxt dev",
+    "clean": "pnpx -q -y rimraf .nuxt .output",
+    "clean:all": "pnpm clean && pnpx -q -y rimraf node_modules",
     "lint": "prettier --ignore-path=.gitignore -c .",
     "format": "prettier --ignore-path=.gitignore -w ."
   },
   "prettier": "@brlt/prettier/vue",
   "devDependencies": {
     "@brlt/prettier": "1.6.4",
-    "nuxt": "3.0.0-rc.1",
+    "@types/marked": "4.0.3",
+    "@types/prismjs": "1.26.0",
+    "highlight.js": "^11.5.1",
+    "marked": "4.0.15",
+    "nuxt": "3.0.0-rc.2",
     "nuxt-windicss": "2.3.1",
     "prettier": "2.6.2",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.7"
+    "prismjs": "1.28.0",
+    "typescript": "4.6.4",
+    "ufo": "^0.8.3",
+    "vite": "2.9.7",
+    "vue": "3.2.33"
   }
 }
