Update package.json and lockfile

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "license": "MIT",
   "author": "Nicholas Berlette <nick@berlette.com>",
   "private": true,
-  "repository": "nberlette/nuxt-timeline-component",
-  "homepage": "https://github.com/nberlette/nuxt-timeline-component#readme",
-  "readme": "https://github.com/nberlette/nuxt-timeline-component#readme",
-  "bugs": "https://github.com/nberlette/nuxt-timeline-component/issues",
-  "description": "Simple example of a Timeline Component implementation for Nuxt 3, as a minimal chronological list of some personal projects.",
+  "repository": "nberlette/nuxt-timeline",
+  "homepage": "https://github.com/nberlette/nuxt-timeline#readme",
+  "readme": "https://github.com/nberlette/nuxt-timeline#readme",
+  "bugs": "https://github.com/nberlette/nuxt-timeline/issues",
+  "description": "Timeline Component built for Vue 3 and Nuxt 3.",
   "keywords": [
     "nuxt",
     "nuxt3",
@@ -24,10 +24,10 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "pnpm build && nuxt preview",
-    "start": "nuxt dev",
-    "clean": "pnpx -q -y rimraf .nuxt .output",
-    "clean:all": "pnpm clean && pnpx -q -y rimraf node_modules",
+    "preview": "npm run build && nuxt preview",
+    "start": "npm install && nuxt dev",
+    "clean": "npx -q -y rimraf .nuxt .output",
+    "clean:all": "npm run clean -- node_modules",
     "lint": "prettier --ignore-path=.gitignore -c .",
     "format": "prettier --ignore-path=.gitignore -w ."
   },
@@ -36,6 +36,7 @@
     "@brlt/prettier": "1.6.4",
     "@types/marked": "4.0.3",
     "@types/prismjs": "1.26.0",
+    "github-slugger": "^1.4.0",
     "highlight.js": "^11.5.1",
     "marked": "4.0.15",
     "nuxt": "3.0.0-rc.2",
